# regact

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
debug/: README.md  block0_smoke.py  block1_types.py  block2_env.py  block3_http.py  block4_5_agent_smoke.py  block4_agent.py  block5_workspace.py  block6_controller_feature.py  block6_eval.py  block7_loop.py  block8_problems.py  block8b_arc.py  prompt_preview.py  sec_agent_smoke.py  sec_backend_check.py  sec_discover_endpoints.py  sec_discover_loop_mac.py  sec_discover_paths.py  sec_home_experiment.py  sec_probe.py  sec_wrap_preview.py
debug/sandbox_lesson/: demo.py  probe.py
docs/: adastra-pipeline.md  agent-isolation.md  agents-setup.md  contexte_isolation_state.md  debug_isolation_linux.md  sandbox-testing.md
docs/research/: discovery_dynamics_report.md
environnement/ar25/0c556536/: metadata.json
environnement/ar25/e3c63847/: metadata.json
environnement/bp35/0a0ad940/: metadata.json
environnement/cd82/fb555c5d/: metadata.json
environnement/cn04/2fe56bfb/: metadata.json
environnement/cn04/65d47d14/: metadata.json
environnement/dc22/4c9bff3e/: metadata.json
environnement/dc22/fdcac232/: metadata.json
environnement/ft09/0d8bbf25/: metadata.json
environnement/g50t/5849a774/: metadata.json
environnement/ka59/38d34dbb/: metadata.json
environnement/ka59/9f096b4a/: metadata.json
environnement/lf52/271a04aa/: metadata.json
environnement/lp85/305b61c3/: metadata.json
environnement/ls20/9607627b/: metadata.json
environnement/m0r0/492f87ba/: metadata.json
environnement/m0r0/dadda488/: metadata.json
environnement/r11l/495a7899/: metadata.json
environnement/r11l/aa269680/: metadata.json
scripts/adastra/: simplelm_regact.sh
src/regact/: __init__.py  run_exp.py  run_kaggle.py
tests/: test_agent.py  test_anticheat.py  test_arc_agi.py  test_cli_agents.py  test_config.py  test_config_loader.py  test_control_channel.py  test_controller_feature.py  test_egress_proxy.py  test_env_transport.py  test_errors.py  test_eval.py  test_eval_subprocess.py  test_experiment.py  test_http.py  test_lifecycle.py  test_logger.py  test_loop_integration.py  test_loop_logic.py  test_obs.py  test_problems.py  test_renderer.py  test_result.py  test_run_summary.py  test_run_task.py  test_sandbox.py  test_scheduler.py  test_session.py  test_smoke.py  test_transcript.py  test_viz.py  test_workspace.py  test_wrapped_env.py
(+106 files in other folders)
