[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regact"
version = "0.0.1"
description = "Reasonning Game Act Framework"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Léandre Ramos"}, { name = "Timothée Boulet" }]

# Core framework infra only (lightweight, all on PyPI). Games and code-agent
# backends are optional extras so a base install is always clean.
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
minigrid = ["gymnasium>=0.29", "minigrid>=2.3"]
arc = ["arc-agi"]
# alancode is installed editable from the sibling repo, e.g.
#   pip install alancode (wait for it to be published on PyPI) or
#   pip install -e ../alancode (for local development)
agents = ["alancode"]
viz = ["imageio>=2.31", "imageio-ffmpeg"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regact"]
# Ship prompt/template markdown alongside the package (read at runtime).
artifacts = ["*.md"]

# Editable installs add src/ to sys.path (simple .pth), so adding/moving modules
# never requires a reinstall.
[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

# Modules referenced only as forward-refs by earlier blocks; they land later.
[[tool.mypy.overrides]]
module = ["regact.problems.base", "regact.agent.claude_adapter"]
ignore_missing_imports = true

# Optional game/agent backends, imported lazily; not present in a base install.
[[tool.mypy.overrides]]
module = ["gymnasium", "gymnasium.*", "minigrid", "minigrid.*", "alancode", "alancode.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: end-to-end tests (scripted agent + fake env, no live LLM).",
    "slow: slower tests.",
    "live: requires a real LLM or game (excluded by default).",
]
